[gd_scene load_steps=7 format=3 uid="uid://c7pdced6p1byi"]

[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_6fk1t"]
[ext_resource type="Texture2D" uid="uid://bwqwlyy6jpfgn" path="res://Assets/miner_walk_cycle.png" id="2_twc6j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_60rt3"]
atlas = ExtResource("2_twc6j")
region = Rect2(13, 0, 13, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsqh1"]
atlas = ExtResource("2_twc6j")
region = Rect2(0, 0, 13, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_7begm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60rt3")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60rt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsqh1")
}],
"loop": false,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_crrl0"]
radius = 6.0
height = 18.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(817, 150)
scale = Vector2(11.5448, 11.5836)
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_6fk1t")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_7begm")
animation = &"run"
autoplay = "idle"

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="PlayerArea" type="Area2D" parent="."]
scale = Vector2(0.0866191, 0.0863289)
collision_layer = 4
collision_mask = 4

[node name="PlayerHitbox" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(-9.53674e-07, -29)
scale = Vector2(11.5448, 11.5836)
shape = SubResource("CapsuleShape2D_crrl0")

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(1.74046e-05, -2.50354)
scale = Vector2(1.0053, -1.00637)
shape = SubResource("CapsuleShape2D_crrl0")
disabled = true

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
